--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Welcome</title>
+        <title>Welcome to Socialance!</title>
     </head>
     <body>
+    <h1>Socialance</h1>
+
     {% if log %}
         <p>Welcome, </p>
     {% else %}
