--- a/templates/register.html
+++ b/templates/register.html
@@ -5,15 +5,23 @@
         <title>Sign up</title>
     </head>
     <body>
-        <form action="/signup" method="post"
+        <form action="/signup" method="post">
             <p>Enter first name</p>
+            <label>
                 <input type="text" name="firstName"/>
+            </label>
             <p>Enter last name</p>
+            <label>
                 <input type="text" name="lastName"/>
+            </label>
             <p>Enter email</p>
+            <label>
                 <input type="email" name="email"/>
+            </label>
             <p>Enter password</p>
+            <label>
                 <input type="password" name="password"/>
+            </label>
         </form>
         <br/>
         <input type="submit"/>
