--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign in</title>
+    <script src="{{ url_for('static', filename='login_style.css') }}"></script>
 </head>
 <body>
 <form action="/signin" method="post">
     <p>Enter login:</p>
+    <label>
         <input type="text" name="login"/>
+    </label>
     <p>Enter password:</p>
+    <label>
         <input type="password" name="password"/>
+    </label>
     <br/>
     <input type="submit"/>
 </form>
